--- a/XiaoYi/Base.lproj/Main.storyboard
+++ b/XiaoYi/Base.lproj/Main.storyboard
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="dXq-r7-Mwe">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Near View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="NearViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +16,109 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2pD-oJ-oCY">
+                                <rect key="frame" x="58" y="285" width="46" height="30"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="goToNextView:" destination="BYZ-38-t0r" eventType="touchUpInside" id="jaR-cF-5xM"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PLD-0p-3Ik">
+                                <rect key="frame" x="58" y="357" width="120" height="30"/>
+                                <state key="normal" title="navigation跳转"/>
+                                <connections>
+                                    <action selector="goToNextViewByNavigation:" destination="BYZ-38-t0r" eventType="touchUpInside" id="FLb-ey-lYR"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <navigationItem key="navigationItem" id="OFb-8x-5iy"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1511" y="-585"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="gSD-wE-pMy">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="dXq-r7-Mwe" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="9pw-4w-OFf">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <color key="tintColor" red="0.83921568627450982" green="0.12549019607843137" blue="0.18431372549019609" alpha="1" colorSpace="calibratedRGB"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="Iom-ms-mI0" kind="relationship" relationship="viewControllers" id="a5V-0A-KYu"/>
+                        <segue destination="pUk-DF-8dJ" kind="relationship" relationship="viewControllers" id="oSS-5X-j96"/>
+                        <segue destination="Kxi-qE-Jzd" kind="relationship" relationship="viewControllers" id="B6I-uE-aVJ"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SWP-3F-2FJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-252" y="65"/>
+        </scene>
+        <!--我的-->
+        <scene sceneID="mk5-J5-XXX">
+            <objects>
+                <viewController id="Kxi-qE-Jzd" customClass="MyViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="g0Y-hY-pPC"/>
+                        <viewControllerLayoutGuide type="bottom" id="THE-QZ-YX8"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="IYM-op-hhe">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="我的" image="yi_nearby_mine" id="zLh-F2-xzF"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="IeL-ja-6cb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="694" y="874"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="2wq-Nn-LhV">
+            <objects>
+                <viewController id="pUk-DF-8dJ" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="jfH-xE-WEP"/>
+                        <viewControllerLayoutGuide type="bottom" id="Wjd-Yp-Lfy"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="maq-D1-PXy">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="ius-op-EME"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Yqu-D6-TsD" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="700" y="103"/>
+        </scene>
+        <!--附近-->
+        <scene sceneID="YlX-op-P2O">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Iom-ms-mI0" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="附近" id="7uo-NB-cWm"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="QfA-2x-GrP">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="yKc-hr-GEY"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1Pf-Pp-z9o" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="801" y="-585"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="yi_nearby_mine" width="22" height="24"/>
+    </resources>
 </document>
